# ld-audit-search-mod

./: .gitignore  README.md  default.nix  flake.nix  ld-audit-prefer-runpath.c  overlay.nix
.github/workflows/: build.yml
examples/: config.yaml
src/: CMakeLists.txt  lib.cpp
